--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,25 @@
   </head>
 
   <body>
+    <% flash.each do |key, value| %>
+      <%= content_tag :div, value, class: "flash #{key}" %>
+    <% end %>
+    <nav>
+      <ul>
+        <% if user_signed_in? %>
+          <li>
+            <%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></li>
+          </li>
+        <% else %>
+          <li>
+            <%= link_to 'Sign In', new_user_session_path %></li>
+          </li>
+          <li>
+            <%= link_to 'Sign Up', new_user_registration_path %></li>
+          </li>
+        <% end %>
+      </ul>
+    </nav>
     <%= yield %>
   </body>
 </html>
