--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,9 @@
       <ul>
         <% if user_signed_in? %>
           <li>
+            Signed in as <%= current_user.first_name %></li>
+          </li>
+          <li>
             <%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></li>
           </li>
         <% else %>
