small changes for tests

--- a/app/assets/stylesheets/components/_nav-bar.scss
+++ b/app/assets/stylesheets/components/_nav-bar.scss
@@ -5,7 +5,7 @@
   padding: 20px;
   background: $darkGray;
 
-  button {
+  .button {
     position: relative;
     display: inline-block;
     margin-right: 10px;
